fix sezione 5 col middle height e overflow

--- a/style/style.css
+++ b/style/style.css
@@ -100,11 +100,11 @@ nav img, nav a, nav button {
 }
 
 .nav-left, .nav-right {
-    width: calc(100% -4px);
+    width: calc(50% - 8px);
 }
 
 .nav-right {
-    float: right;
+    text-align: right;
 }
 
 .btn {
@@ -413,7 +413,8 @@ nav a {
 .col-sezione5-middle {
     width: calc(100% - 50vw);
     background-color: #f5f5f5;
-    min-height: 25vw;
+    height: 25vw;
+    overflow: auto;
 }
 
 .box-logo {
